--- a/new/index.html
+++ b/new/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Dummy Page</h1>
     <p>This is a dummy HTML page for demonstration purposes.</p>
+    <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h4>
 </body>
 </html>
